Fix ctr+shift+tab on Dvorak-QWERTY.

The keyboard shortcut was behaving incorrectly and triggering the shortcut for
ctr+tab. This was fallout from the change of the menu item to use "ctr+shift+->"
as the key equivalent, and AppKit's funky handling of ctr+shift+tab to create
"end of medium" instead of "horizontal tab".

Bug: 896389
Change-Id: Iea85c69077874201b6e3608771aa9fcbfa368aef
Reviewed-on: https://chromium-review.googlesource.com/c/1298187
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Erik Chen <erikchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602459}
Former-commit-id: b8c2f02721071231304a4899a4df2f2dee94487e